fix: debug css for dark mode (#514)

--- a/workspaces/styles/src/debug.css
+++ b/workspaces/styles/src/debug.css
@@ -78,6 +78,7 @@
   background: transparent;
   cursor: pointer;
   padding: 0;
+  color: var(--flows-debug-fg-default);
 }
 
 .flows-debug-top-left {
@@ -112,6 +113,7 @@
   animation: flows-debug-fadeIn 120ms ease-out;
 }
 .flows-debug-menu-inset {
+  color: var(--flows-debug-fg-default);
   transition: background 120ms ease-in-out;
   padding: 7px;
   border-radius: 99px;
@@ -192,6 +194,8 @@
   overflow-x: auto;
   max-height: 480px;
   border: var(--flows-debug-border);
+  scrollbar-width: thin;
+  scrollbar-color: var(--flows-debug-fg-subtle) transparent;
 }
 
 .flows-debug-inline-code {
@@ -246,6 +250,7 @@
   font-weight: 600;
   padding: 4px 8px;
   border-radius: 6px;
+  color: var(--flows-debug-fg-default);
   background-color: var(--flows-debug-bg-subtle);
   border: var(--flows-debug-border);
   cursor: pointer;
@@ -262,6 +267,8 @@
 .flows-debug-section-close {
   padding: 4px;
   border-radius: 6px;
+  width: 24px;
+  height: 24px;
 
   &:hover {
     background-color: var(--flows-debug-bg-hover);
@@ -281,6 +288,7 @@
 .flows-debug-select {
   all: unset;
   border-radius: 6px;
+  color: var(--flows-debug-fg-default);
   background-color: var(--flows-debug-bg-subtle);
   border: var(--flows-debug-border);
   padding: 4px 8px;
@@ -304,6 +312,7 @@
   display: flex;
   align-items: center;
   font-size: 12px;
+  color: var(--flows-debug-fg-default);
   background-color: var(--flows-debug-bg-subtle);
   min-width: 20px;
   height: 20px;
